# stark-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  SKILL.md  SOUL.md  STARK_BOT_SKILLS.md  TODO.md  audit_log.py  build_and_push_docker.sh  business-ops-skill by dead  business_operations_assistant by discord @deadisdeadd  discord_tipping.db-shm  discord_tipping.db-wal  docker-compose.dev.yml  docker-compose.yml  executor.py  guardian_config.yaml  guardian_loop.py  protocol_registry.md  railway.toml  risk_engine.py  scanner.py  stark-bot-skills-validation-proposal.md
config/: ai_endpoints.ron  bot_config.ron  defaultagents.ron  starflask_seed.ron
modules/opencode/: Cargo.toml  module.toml  service.py  skill.md
modules/opencode/src/: main.rs  opencode_client.rs  routes.rs
modules/opencode/types/: Cargo.toml
modules/opencode/types/src/: lib.rs
seed-packs/: Cargo.toml
seed-packs/packs/: crypto.json  discord_moderator.json  general.json  image_gen.json  social_media.json  telegram_moderator.json  video_gen.json
seed-packs/src/: main.rs
skills/: agent_identity.md  bankr.md  code-review.md  commit.md  create-project.md  deploy-github.md  discord.md  discord_tipping.md  full-dev-workflow.md  github.md  impulse_evolver.md  moltbook.md  notes.md  starkbot.md  super_router.md  swap.md  transfer.md  transfer_eth.md  twitter.md  uniswap_lp.md  x402_payment.md
soul_template/: GUIDELINES.md
stark-backend/: Cargo.toml  SAFETY_FEATURES.md  TODO.md
stark-frontend/: agent-chat.html  agent-settings.html  api-keys.html  channels.html  dashboard.html
(+390 files in other folders)
