[package]
name = "seed-packs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed-packs"
path = "src/main.rs"

[dependencies]
axoniac = { path = "../../axoniac-monorepo/axoniac-rs" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
