[package]
name = "opencode-service"
version = "0.1.0"
edition = "2024"

[dependencies]
opencode-types = { path = "types" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
